--- a/phase-4/lession-3/Practice_Project1/src/app/app.component.html
+++ b/phase-4/lession-3/Practice_Project1/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Content From the app.component</h1>
-<p>This is some content from the app component.</p>
+<p style="color:blue">This is some content from the app component.</p>
 <app-chart></app-chart>
